objects/rh2__RH_Job__c.object
<CustomObject>
    <fields>
        <fullName>rh2__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__ApexClassName__c</fullName>
        <label>Class</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__BatchSize__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Increment__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Increment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__NextFireTime__c</fullName>
        <label>Next Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rh2__PreviousFireTime__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_Name__c</fullName>
        <label>Rollup Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rh2__Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rollup Job</label>
    <listViews>
        <fullName>rh2__All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>rh2__Rollup_Name__c</columns>
        <columns>rh2__Active__c</columns>
        <columns>rh2__PreviousFireTime__c</columns>
        <columns>rh2__NextFireTime__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rh2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Rollup Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rh2__Positive_Increment</fullName>
        <active>true</active>
        <errorConditionFormula>rh2__Increment__c &lt; 1</errorConditionFormula>
        <errorDisplayField>rh2__Increment__c</errorDisplayField>
        <errorMessage>Must enter a value that is greater than or equal to 1.</errorMessage>
    </validationRules>
</CustomObject>